Placeholder should not be translated.

--- a/docs/manual/po/da.po
+++ b/docs/manual/po/da.po
@@ -146,7 +146,7 @@ msgstr "Panel til Xfce"
 
 #: preferences.page:8(desc)
 msgid "Configure the <placeholder-1/>"
-msgstr "Indstil <pladsholderen-1/>"
+msgstr "Indstil <placeholder-1/>"
 
 #: preferences.page:18(title)
 msgid "Preferences"
@@ -222,7 +222,7 @@ msgstr "Fælles deklaration"
 
 #: license.page:53(p)
 msgid "For the full text of the license, see the <placeholder-1/>, or read the full <placeholder-2/>."
-msgstr "For den fulde tekst af licensen, læs <pladsholder-1/>, eller læs den fulde <pladsholder-2/>."
+msgstr "For den fulde tekst af licensen, læs <placeholder-1/>, eller læs den fulde <placeholder-2/>."
 
 #: launcher.page:8(desc)
 msgid "Program launcher with optional menu"
@@ -234,7 +234,7 @@ msgstr "Opstarter"
 
 #: introduction.page:8(desc)
 msgid "Introduction to <placeholder-1/>"
-msgstr "Introduktion til <pladsholder-1/>"
+msgstr "Introduktion til <placeholder-1/>"
 
 #: introduction.page:18(title)
 msgid "Introduction"
@@ -274,7 +274,7 @@ msgstr "Menu til progermmer"
 
 #: add-new-items.page:9(desc)
 msgid "Add new plugins to the <placeholder-1/>"
-msgstr "Føj nye udvidelsmoduler til <pladsholder-1/>"
+msgstr "Føj nye udvidelsmoduler til <placeholder-1/>"
 
 #: add-new-items.page:19(title)
 msgid "Add New Plugins"
