Remove some weird test from the NEWS file.

--- a/NEWS
+++ b/NEWS
@@ -13,7 +13,7 @@
 - Add dist-hook: all to the libxfce4panel/ Makefile.am.
 - Add missing translation.
 - Merge translation from master back to xfce-4.6.
-- Remove unused code.	Nick Schermer	1	-2/+1
+- Remove unused code.
 - Add option to tasklist to force a fixed width (bug #5045).
 - Get the time the same as orange does, hopefully should fix bug #5352.
 - Better check for the lcd resize when the number of hour digits changes (bug #5218).
