Fix rounding issues in panel borders.

--- a/NEWS
+++ b/NEWS
@@ -72,7 +72,7 @@ Panel
 - External plugins are automatically restarted if they have not
   crashed in the last 60 seconds. If they crash more then once in
   this time window, the user is asked what to do (restart or remove).
-- Gtk style properties for popup/popdown delay.
+- Gtk style properties for popup/popdown delay (bug #5707).
 - Hidden option to disable struts for windows on a screen edge, so
   the space is used by the window manager for other windows.
 
