Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+4.6.4
+=====
+- Destroy windowlist menu in an idle (bug #3853).
+- Link directly to libm (bug #6233).
+- Allow compilation with exo-1 too.
+- Translation updates (ru, ta, pr_BR, hu, gl, fi, it, si, uk, id, ug).
+
 4.6.3
 =====
 - Don't use g_object_set in the init function (bug #6110).
