Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+4.7.4
+=====
+- Add support for menu monitoring.
+- Allow translations of the "Xfce Panel" string.
+- Add submodule to xfce4-docs/xfce4-panel-master.
+- Fix accelerator key conflict (bug #6765).
+- Add test for docs module and depend on xdt 4.7.3.
+- Fix distributing the manual in the dist tarball.
+- Translation updates (ug, gl, zh_TW, de, sk, nl, da, kk, uk, pt,
+  de, it, ja, el, fi, sv, ca, eu, hu).
+
 4.7.3
 =====
 - Add support to run plugins in valgrind.
