Fix wrong capitalization of Xfce.

--- a/po/be.po
+++ b/po/be.po
@@ -505,7 +505,7 @@ msgstr "Вэртыкальная"
 
 #: ../panel/panel-preferences-dialog.glade.h:38
 msgid "Xfce Panel"
-msgstr "Панэль XFce"
+msgstr "Панэль Xfce"
 
 #: ../panel/panel-preferences-dialog.glade.h:39
 msgid "_Alpha:"
@@ -757,7 +757,7 @@ msgstr "Паказваць назвы дас_тасаваньняў"
 #: ../plugins/applicationsmenu/applicationsmenu.c:38
 #, fuzzy
 msgid "Xfce Menu"
-msgstr "Панэль XFce"
+msgstr "Панэль Xfce"
 
 #: ../plugins/applicationsmenu/applicationsmenu.c:463
 #: ../plugins/directorymenu/directorymenu.c:369
