--- a/po/ca.po
+++ b/po/ca.po
@@ -1,5 +1,5 @@
 # Catalan translations for xfce4-panel package.
-# xfce4-panel for XFce desktop environment.
+# xfce4-panel for Xfce desktop environment.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Carles Muñoz Gorriz <carlesmu@internuatas.org>, 2003-2004, 2008-2010.
