Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+4.7.6
+=====
+- Always use applications menu for default menu.
+- Fix Exec key in desktop file handler (bug #6912).
+- Fix if statement in xfce_tasklist_button_visible().
+- Depend on garcon 0.1.4.
+
 4.7.5
 =====
 - Don't destroy the about dialog.
